# airflow-dvc

./: .bumpversion.cfg  .gitignore  MANIFEST.in  Makefile  README.md  VERSION  install_deps.sh  package.json  publish.py  pyproject.toml  run_airflow.sh  setup.cfg
.dvc/: config
.github/: FUNDING.yml
.github/workflows/: ci.yml  lint.yml
airflow_dvc/: __init__.py  config.py  custom_downloads.py  custom_uploads.py  dvc_cli.py  dvc_client.py  dvc_download.py  dvc_download_operator.py  dvc_existence_sensor.py  dvc_hook.py  dvc_update_operator.py  dvc_update_sensor.py  dvc_upload.py  exceptions.py  logs.py  stats.py  test_utils.py
airflow_dvc/cli/: __init__.py  entrypoint.py
airflow_dvc/plugin/: __init__.py  git_url_parser.py  plugin.py
airflow_dvc/plugin/templates/dvc/: index.html  list.html  pushes.html
airflow_dvc/tests/: helpers.py
dags/: dvc_sensor_example.py  dvc_upload_example.py
data/: .gitignore  3.txt.dvc  4.txt.dvc  5.txt.dvc  6.txt.dvc  random1  random2.txt.dvc  random3.txt  test1.dvc
example/dags/: dvc_download_example.py  dvc_existence_sensor_example.py  dvc_sensor_example.py  dvc_update_sensor_example.py  dvc_upload_example.py  dvc_upload_with_template_example.py  upload_with_template_example.py
example/plugins/: dvc.py
tests/: .gitignore  test1.dvc  test_dag_loading.py  test_dvc_download_operator.py  test_dvc_existence_sensor.py  test_dvc_existence_sensor_example.py  test_dvc_update_operator.py  test_dvc_update_sensor.py  update_sensor_test_script.py
tests/helpers/: __init__.py  dag_tests.py
