[tool.poetry]
name = "airflow_dvc"
version = "0.1.0"
description = "DVC operator for Airflow"
authors = ["Piotr Styczyński <piotrsty1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
#apache-airflow = "^2.0.1"
SQLAlchemy = "<1.4.0"
GitPython = "^3.1.14"
dvc = {extras = ["s3"], version = "^2.0.17"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
